<resources>
    <string name="app_name">Kiu\'</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="rate">€/h</string>
    <string name="note">Note:</string>
    <string name="searchHintStr">Cerca helper vicino a...</string>
    <string name="noteHintStr">Note...</string>
    <string name="title_activity_search">Search</string>
    <string name="favorite">Favorite:</string>
    <string name="new_request_for_queue">New request for queue!</string>
    <string name="new_kiu_request">New Kiu\' request</string>
    <string name="kiuwer">Kiuwer:</string>
    <string name="helper">Helper:</string>
    <string name="time">Time:</string>
    <string name="location">Location:</string>
    <string name="more">More</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="repete_password">Repete Password:</string>
    <string name="profile_img_txt">Take a picture for your account, or choose one from the gallerytop</string>
    <string name="password_too_short">The minimum password length is 6 characters.</string>
    <string name="no_feedbacks">Are not present feedbacks.</string>
    <!-- <string name="date">Date:</string> -->


    <!-- PAOLO -->
    <!-- <string name="server_client_id">1032027063768-4ga1am399m16ckv30ov16oljelcpvuv5.apps.googleusercontent.com</string> -->
    <!-- <string name="server_client_id">466535417088-a87agchftgldv18t3k9bgjmu46ba2876.apps.googleusercontent.com</string> -->
    <string name="server_client_id">466535417088-bh4c3md36971gao420vlb72s3j9vsil9.apps.googleusercontent.com</string>


    <string name="title_text">Google Sign-In\nQuickstart</string>


    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
     <string name="error_null_person">
         Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
         enabled for your project, you have a properly configured google-services.json file
         and that your device has an internet connection.
     </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>
    <string name="required">Required.</string>
    <string name="pwdDifferent">Passwords do not match!</string>
    <string name="auth_failed">Authentication failed!</string>
    <string name="registration_failed">Sign in failed!</string>


    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>


    <!-- Button labels -->
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>


    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>


    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>


    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="text_negotiates">NEGOTIATES</string>
    <string name="negotiates"> "Change the price"</string>

    <!-- END PAOLO -->

    <!-- IVAN -->
    <string name="addrate">Rate</string>
    <string name="userkiuer">Kiuer</string>
    <string name="your_helpers">Your Helpers</string>
    <string name="other">Other</string>
    <string name="home">Home</string>
    <string name="logout">Log Out</string>
    <string name="feedback">Feedback</string>
    <string name="showfeedback">Show Feedback</string>
    <string name="kiuwername">Name</string>
    <string name="kiuwermail">Email</string>
    <string name="kiuwersurname">Surname</string>
    <string name="dialogmessage">Do you want to exit?</string>
    <string name="confirmbutton">Confirm</string>
    <string name="cancelbutton">Cancel</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="oggetto">Object</string>
    <string name="message">Write your messagge...</string>
    <string name="chooser">Send a mail with</string>
    <string name="ratehelper">Vote helper</string>
    <string name="filapresso">Queue at:</string>
    <string name="orario">Time:</string>
    <string name="Excellent">Excellent</string>
    <string name="Verygood">Very Good</string>
    <string name="Good">Good</string>
    <string name="mediocre">Mediocre</string>
    <string name="verybad">Very Bad</string>
    <string name="helperside">Become Helper</string>
    <string name="kiuerside">Become Kiuer</string>
    <string name="leavefeedback">Leave a feedback</string>
    <string name="changepass">Change Password</string>
    <!-- END IVAN -->

    <!-- DONATO -->
    <string name="action_logout">Logout</string>
    <string name="action_kiuwer_requests">Kiuer Requests</string>
    <string name="action_rate_kiuwer">Rate</string>
    <string name="action_show_feedback">Show Feedback</string>
    <string name="menu_other">Other</string>
    <string name="current_queue">CURRENT QUEUE</string>
    <string name="current_kiuwer">You are in the queue for:</string>
    <string name="date">Date:</string>
    <string name="start">Start:</string>
    <string name="presso">At:</string>
    <string name="button_directions">GET DIRECTIONS</string>
    <string name="button_start_queue">START QUEUE</string>
    <string name="next_queues">NEXT QUEUES</string>
    <string name="time_passed">Time Passed:</string>
    <string name="no_queue">No element avaiable</string>
    <string name="contact">CONTACT</string>
    <string name="message_logout">Do you want to logout now?</string>
    <string name="yes_option">Yes</string>
    <string name="feedback_received">feedback received</string>
    <string name="avarage_rating"> avarage rating:</string>
    <string name="which">OF WHICH</string>
    <string name="all_feed">ALL FEEDBACK</string>
    <string name="top_of_the_top">Top of the top</string>
    <string name="very_good">Very good</string>
    <string name="decent">Decent</string>
    <string name="disappointing">Disappointing</string>
    <string name="very_bad">Very bad</string>
    <string name="queue_location">Queue at:</string>
    <string name="your_feedback_about">YOUR FEEDBACK ABOUT</string>
    <string name="evaluate">Evaluate your experience</string>
    <string name="select">Select</string>
    <string name="visibility">Visibility</string>

    <string-array name="spinner_rate">
        <item>Excellent</item>
        <item>Very Good</item>
        <item>Good</item>
        <item>Mediocre</item>
        <item>Very Bad</item>
    </string-array>

    <string name="comment_rate">Leave a comment here:</string>
    <string name="share_experience">How was your experience with this user?</string>
    <string name="public_comment">PUBLIC</string>
    <string name="cancel">CANCEL</string>
    <string name="done">DONE</string>
    <string name="Start_time">Start Time</string>
    <string name="End_time">End Time</string>
    <string name="weekly">Weekly program</string>
    <string name="set_availability">Set Availability</string>
    <string name="availability">Availability</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="empty_data">You must enter a time interval!</string>
    <string name="warning">Warning!</string>
    <string name="save_availability">Save Availability</string>
    <string name="question_save_availability">Do you want to save the state of this availability?</string>
    <string name="get_driving_direction">Get driving direction</string>
    <string name="accept">Accept</string>
    <string name="ignore">Ignore</string>
    <!-- END DONATO -->


        <!-- END PAOLO -->
    <string name="login">Login</string>
    <string name="signed_up">Signed Up</string>
    <string name="text_signed_up">Do not you have an account?</string>
        <!-- IVAN -->
        <string name="Current_queue2">Current Queue</string>
        <string name="searchhelper">Search Helper</string>
        <!-- END IVAN -->


    <!-- DIEGO -->
    <string-array name="ray_array">
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>50</item>
    </string-array>

    <string name="search">Ray: </string>
    <string name="AlertTitle">Send Request</string>
    <string name="AlertMessage">Are you sure you want to send the request?</string>
    <string name="search_layout">Searching ray: Km</string>
    <string name="notification">Helper Availability is on. Click for settings</string>
    <string name="visibility_on">Visibility on</string>
    <string name="visibility_off">Visibility off</string>
    <string name="send_request">SEND REQUEST</string>
    <string name="your_search">Your Search:</string>
    <string name="send_email">Send\nEmail</string>
    <string name="object">Payment for queue</string>
    <string name="final_message">Dear helper, thanks for the queue.\nI would like to meet you for the payment.</string>
    <string name="pay">Pay</string>
    <!-- FINE DIEGO -->

    </resources>
